admin: add sort functionality in nick status ui

--- a/app/client/base.styl
+++ b/app/client/base.styl
@@ -178,5 +178,11 @@ nav
      #nick-status
         margin-top: 20px
 
+        th.sortable
+            cursor: pointer
+
+        th.sortable:hover
+            background: #d4d4d4
+
         .sort-icon
             margin-top: 4px
