--- a/app/client/base.styl
+++ b/app/client/base.styl
@@ -186,3 +186,7 @@ nav
 
         .sort-icon
             margin-top: 4px
+
+     #nick-status-error
+        display: none
+        margin-top: 20px
