--- a/app/client/base.less
+++ b/app/client/base.less
@@ -50,7 +50,7 @@ nav {
         width: 100%;
     }
 }
-.search-container {
+.search-container, .nick-status-container {
     .row {
         margin-top: 15px;
     }
@@ -133,6 +133,22 @@ nav {
             position: relative;
             top: 2px;
         }
+    }
+    #nick-status {
+      margin-top: 20px;
+      th.sortable {
+          cursor: pointer;
+      }
+      th.sortable:hover {
+          background: #d4d4d4;
+      }
+      .sort-icon {
+          margin-top: 4px;
+      }
+    }
+    #nick-status-error {
+      display: none;
+      margin-top: 20px
     }
 }
 .search-container .chzn-container,.search-container .chzn-cotainer-single {
