add video chat's text chat UI

--- a/app/client/main.less
+++ b/app/client/main.less
@@ -878,6 +878,44 @@ margin-left: 10px;
   font-weight: bold;
 }
 
+#video-chat-text-chat {
+  width: 220px;
+  height: 250px;
+  position: relative;
+  top: 20px;
+  float: right;
+  margin-right: -10px;
+}
+
+#video-chat-text-chat .chat-user {
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+#video-chat-text-chat .chat-msg {
+  height: 174px;
+  font-size: 12px;
+  overflow-y: scroll;
+}
+
+.chat-msg .msg {
+  padding: 5px;
+}
+
+.msg .from-user {
+  padding: 3px;
+}
+
+.msg .text {
+  margin-left: 1px;
+}
+
+#video-chat-text-chat .input-box {
+  border-color: #BCE8F1;
+  border-left: none;
+  border-right: none;
+  border-radius: 0;
+}
 #video-bottom-container {
   clear: both;
   position: relative;
